# se

./: .env.example  .gitignore  CLAUDE.md  README.md  asr_whisper.py  data_utils.py  diff_logmel.py  eval_headroom.py  eval_traj.py  exps.md  infer.py  losses.py  pyproject.toml  report_wer.md  requirements.txt  se_model.py  train_exp2.py
afe/: __init__.py
afe/asr/: diff_logmel.py  whisper.py
afe/checkpoint/: io.py
afe/config/: defaults.py
afe/data/: audio.py  librispeech.py  mix_dataset.py  robot.py
afe/engine/: trainer.py
afe/evaluation/: headroom.py  robot.py  trajectory.py
afe/losses/: asr_aware.py  hybrid.py
afe/modeling/: se_model.py
afe/solver/: lr.py
afe/utils/: constants.py  text.py
checkpoints/: README.md
configs/eval/: librispeech.yaml
configs/train/: exp2.yaml  exp4.yaml  exp5.yaml
docs/: related_works.md
results/: exp2_step3000.md  exp4_trajectory.md  exp5_feat.md  headroom_baseline.md  robot_real_data.md  robot_real_data_largev3.md
tests/: test_config.py  test_logmel.py  test_metrics.py  test_modeling.py  test_robot_pairing.py
tools/: eval_headroom.py  eval_robot.py  eval_trajectory.py  infer.py  test_one.py  train.py  transcribe.py
